[package]
name = "kanri"
version = "0.3.1"
description = "Offline kanban board application"
authors = ["trobonox"]
license = "Apache-2.0"
repository = "https://github.com/trobonox/tauri"
default-run = "kanri"
edition = "2021"
rust-version = "1.57"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.2.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.2.4", features = ["dialog-message", "dialog-open", "dialog-save", "fs-write-file", "protocol-asset", "shell-open"] }
tauri-plugin-persisted-scope = { version = "0.1", features = [
    "protocol-asset",
] }
ignore = "=0.4.18"
tauri-plugin-autostart = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }
tauri-plugin-store = { git = "https://github.com/tauri-apps/plugins-workspace", branch = "dev" }

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
