# SPDX-FileCopyrightText: Copyright (c) 2022-2025 trobonox <hello@trobo.dev>
#
# SPDX-License-Identifier: Apache-2.0

[package]
name = "kanri"
version = "0.8.0"
description = "Offline kanban board application"
authors = ["trobonox"]
license = "GPL-3.0"
repository = "https://github.com/trobonox/kanri"
default-run = "kanri"
edition = "2021"
rust-version = "1.83"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-persisted-scope = { features = ["protocol-asset"], version = "2" }
ignore = "=0.4.23"
tauri-plugin-store = "2.0.0"
tauri-plugin-log = "2.0.0"
tauri-plugin-dialog = "2"
tauri-plugin-os = "2.2.0"
tauri-plugin-fs = "2.2.0"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]

[target."cfg(not(any(target_os = \"android\", target_os = \"ios\")))".dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-window-state = { version = "2" }
